# MonoDevelop

./: .gitignore  README.md
main/: Main.sln  (+2 more)
main/src/addins/: Makefile.am
main/src/addins/CBinding/Parser/: TagDatabaseManager.cs
main/src/addins/CSharpBinding/: Makefile.am
main/src/addins/Deployment/MonoDevelop.Deployment/MonoDevelop.Deployment/: DeployService.cs
main/src/addins/Deployment/MonoDevelop.Deployment/MonoDevelop.Deployment.Targets/: BaseFuseFileCopyHandler.cs
main/src/addins/MonoDevelop.Debugger.Soft/: Makefile.am
main/src/addins/MonoDevelop.Debugger.Win32/MonoDevelop.Debugger.Win32/: CorDebuggerEngine.cs
main/src/addins/MonoDevelop.Debugger/MonoDevelop.Debugger/: DebuggingService.cs  ObjectValueTreeView.cs
main/src/addins/MonoDevelop.GtkCore/MonoDevelop.GtkCore.GuiBuilder/: GtkProjectServiceExtension.cs
main/src/addins/MonoDevelop.PackageManagement/: Makefile.am
main/src/addins/MonoDevelop.Refactoring/MonoDevelop.CodeActions/: CodeActionEditorExtension.cs
main/src/addins/MonoDevelop.SourceEditor2/MonoDevelop.SourceEditor/: DebugValueWindow.cs  ExtensibleTextEditor.cs  GotoLineNumberWidget.cs  SearchAndReplaceWidget.cs  SourceEditorWidget.cs
main/src/addins/MonoDevelop.SourceEditor2/MonoDevelop.SourceEditor.QuickTasks/: QuickTaskOverviewMode.cs  QuickTaskStrip.cs
main/src/addins/VersionControl/: Makefile.am
main/src/addins/VersionControl/MonoDevelop.VersionControl.Git/MonoDevelop.VersionControl.Git/: ConflictResolutionDialog.cs  CredentialsDialog.cs  EditRemoteDialog.cs  GitConfigurationDialog.cs  NewStashDialog.cs  PushDialog.cs  (+2 more)
(+83 files in other folders)
