

SUBDIRS = \
	GnomePlatform \
	MonoDevelop.DesignerSupport \
	MonoDevelop.Debugger \
	MonoDevelop.Debugger.Gdb \
	Deployment \
	MonoDevelop.SourceEditor2 \
	MonoDevelop.Refactoring \
	VersionControl \
	MonoDevelop.Autotools \
	MonoDevelop.Gettext \
	Xml \
	TextTemplating \
	CSharpBinding \
	ILAsmBinding \
	NUnit \
	MonoDeveloperExtensions \
	MonoDevelop.GtkCore \
	ChangeLogAddIn \
	MonoDevelop.WebReferences \
	MonoDevelop.RegexToolkit \
	CBinding \
	MonoDevelop.AssemblyBrowser \
	MonoDevelop.Debugger.Soft \
	WindowsPlatform \
	MonoDevelop.HexEditor \
	MonoDevelop.DocFood \
	MonoDevelop.PackageManagement

